# drone_rover

./: CMakeLists.txt  README.md  mav.parm  mav.tlog  mav.tlog.raw  package.xml  run.sh
dronekit/: Controller.py  cameraMatrix_webcam.txt  drone.pos.out  drone_move.py  drone_utils.py  mav_0_1.parm  plot_error.py
image_scripts/: get_center.py
launch/: apna.launch  hills.launch
models/tagged_husky/: husky.urdf.xacro
scripts/: controller.py  controller2.py  main.py
src/: controller.py  controller2.py  get_center.py  main.py
src/aruco_detection/: aruco_detect.py
worlds/: hill.world  mav.tlog  mav.tlog.raw  mav_0_1.parm  robo.world
worlds/media/materials/scripts/: ArucoMarker.material
